fix overflow scroll

--- a/src/pages/upcoming/upcoming.scss
+++ b/src/pages/upcoming/upcoming.scss
@@ -22,8 +22,16 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
     @content;
   }
 }
-
 .upcoming-trip {
+  height: 90vh;
+  overflow: hidden;
+  padding: 0 20px;
+  @include iphoneX() {
+    overflow-y: scroll;
+  }
+  &:hover {
+    overflow-y: scroll;
+  }
   h1 {
     font-size: 20px;
     text-align: center;
